unpackaged/main/default/objects/rh2__PS_Settings__c/rh2__PS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parameters used for the Rollup Helper application.</description>
    <label>Rollup Helper Settings</label>
</CustomObject>