unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Advanced_Currency_del__c.field-meta.xml
<CustomField>
    <fullName>rh2__Advanced_Currency_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if advanced currency management is enabled.</description>
    <inlineHelpText>If Advanced Currency Management is enabled in your organization select this check box.</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>