unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Batch_Process_Recurring_Activities__c.field-meta.xml
<CustomField>
    <fullName>rh2__Batch_Process_Recurring_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this setting is checked, Rollup Helper will update recurring Event and Task records individually through batch jobs. If this setting is unchecked, Rollup Helper will attempt to update recurring Event and Task records in bulk. Enable this setting if multiple Events or Tasks of the same recurrence type (e.g. Recurs Daily, Recurs Monthly, etc.) are targeted by a rollup.</inlineHelpText>
    <label>Process Recurring Activities In Batches</label>
    <type>Checkbox</type>
</CustomField>