unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__DeveloperExceptionEmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>rh2__DeveloperExceptionEmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field prevents Rollup Helper exception emails from being forwarded to our developers.</inlineHelpText>
    <label>Developer Exception Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>