unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Enable_Validation_Rule_Helper__c.field-meta.xml
<CustomField>
    <fullName>rh2__Enable_Validation_Rule_Helper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked you can have Rollup Helper updates excluded from your select validation rules.</description>
    <inlineHelpText>To enable Rollup Helper updates to be excluded from a Validation Rule add '&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c' at the end of the contents of the Error Condition Formula section of a validation rule.</inlineHelpText>
    <label>Enable Validation Rule Helper</label>
    <type>Checkbox</type>
</CustomField>