unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__EnableHourlyExceptionEmails__c.field-meta.xml
<CustomField>
    <fullName>rh2__EnableHourlyExceptionEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Rollup Helper Exception Monitor will send hourly emails containing exceptions generated within the last hour. If unchecked, the Rollup Helper Exception Monitor will send an email once daily containing exceptions generated within the last day.</description>
    <inlineHelpText>If checked, the Rollup Helper Exception Monitor will send hourly emails containing exceptions generated within the last hour. If unchecked, the Rollup Helper Exception Monitor will send an email once daily containing exceptions generated within the last day.</inlineHelpText>
    <label>Enable Hourly Exception Emails</label>
    <type>Checkbox</type>
</CustomField>