unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Exception_Lifespan__c.field-meta.xml
<CustomField>
    <fullName>rh2__Exception_Lifespan__c</fullName>
    <description>The number of days that exceptions should be saved for before being cleaned up by Rollup Helper</description>
    <label>Exception Lifespan</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>