unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Granular_Scheduled_Jobs__c.field-meta.xml
<CustomField>
    <fullName>rh2__Granular_Scheduled_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is unchecked, scheduled jobs will only run at the top of the hour (HH:00).  If this is checked, scheduled jobs can be run at 5 minute intervals (HH:00, HH:05, HH:10, etc.).</description>
    <inlineHelpText>If this is unchecked, scheduled jobs will only run at the top of the hour (HH:00).  If this is checked, scheduled jobs can be run at 5 minute intervals (HH:00, HH:05, HH:10, etc.).</inlineHelpText>
    <label>Granular Scheduled Jobs</label>
    <type>Checkbox</type>
</CustomField>