unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Limit_Processing_During_Data_Load__c.field-meta.xml
<CustomField>
    <fullName>rh2__Limit_Processing_During_Data_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if you are receiving time-out issues during a data load.  Removes non-essential processing such as filtering out fields that don't need to be updated.</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>