unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Premium_Key__c.field-meta.xml
<CustomField>
    <fullName>rh2__Premium_Key__c</fullName>
    <label>zDeprecated</label>
    <length>64</length>
    <type>Text</type>
</CustomField>