unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__RealtimeEnablementOptOut__c.field-meta.xml
<CustomField>
    <fullName>rh2__RealtimeEnablementOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field prevents the Realtime Enablement pop up from displaying when saving a new Rollup Helper setting.</inlineHelpText>
    <label>Realtime Enablement Opt Out</label>
    <type>Checkbox</type>
</CustomField>