unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Run_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>rh2__Run_Validation_Rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>LEAVE THIS OPTION CHECKED. If unchecked then users will enter records with validation rules not in effect.  When this setting is added to a validation rule, Rollup Helper will turn off the validation rule upon update to a target record.</description>
    <inlineHelpText>LEAVE THIS OPTION CHECKED</inlineHelpText>
    <label>Run Validation Rule</label>
    <type>Checkbox</type>
</CustomField>