unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__SortDirection__c.field-meta.xml
<CustomField>
    <fullName>rh2__SortDirection__c</fullName>
    <inlineHelpText>The sort direction to be used on the all rollups page. This value is set per user after sorting a column on the all rollups page.</inlineHelpText>
    <label>Sort Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>