unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Static_Asynchronous_Processing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>rh2__Static_Asynchronous_Processing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field should be checked if static asynchronous processing is enabled to prevent data load dynamic async from firing unnecessarily.</inlineHelpText>
    <label>Static Asynchronous Processing Enabled?</label>
    <type>Checkbox</type>
</CustomField>