unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__Usage_of_Row_Limits__c.field-meta.xml
<CustomField>
    <fullName>rh2__Usage_of_Row_Limits__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Determines the percentage of query row limit usage Rollup Helper should use when retrieving child records. Lowering this setting may impact rollup accuracy, so it is recommended to keep this setting at or close to 100%. The default value is 100%.</inlineHelpText>
    <label>zDeprecated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>