unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__ValidateRollup__c.field-meta.xml
<CustomField>
    <fullName>rh2__ValidateRollup__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validate Rollup Query</label>
    <type>Checkbox</type>
</CustomField>