unpackaged/main/default/objects/rh2__PS_Settings__c/fields/rh2__validationHelperDuringAsync__c.field-meta.xml
<CustomField>
    <fullName>rh2__validationHelperDuringAsync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Validation Helper will be active during asynchronous processing</description>
    <inlineHelpText>If this is checked, Enable Validation Helper will be active during asynchronous processing</inlineHelpText>
    <label>Allow Validation Helper During Async</label>
    <type>Checkbox</type>
</CustomField>